@@ -1,5 +1,5 @@
 Package: scDD
-Version: 1.3.1
+Version: 1.3.2
 Title: Mixture modeling of single-cell RNA-seq data to indentify genes
         with differential distributions
 Description: This package implements a method to analyze single-cell
